--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -38,7 +38,7 @@
 				</li>
 				<li id="edit-remark" class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						修改备注
+						<p class="info-remark">备注</p>
 						<span id="person-remark" class="mui-badge person-space">数字</span>
 					</a>
 				</li>
