--- a/JiaoBaoYun-hb/html/quan/edit-remark.html
+++ b/JiaoBaoYun-hb/html/quan/edit-remark.html
@@ -18,7 +18,7 @@
 			<a id="save-remark" class="mui-pull-right">保存</a>
 		</header>
 		<div class="mui-content">
-			<input id="remark-input" type="text" placeholder="请输入备注" />
+			<input id="remark-input" type="text" maxlength="20" placeholder="请输入,最多20字!" />
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
