0004120: 账号信息性别默认不合理

--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -29,7 +29,7 @@
 //			mui.init();
 			mui.plusReady(function() {
 					events.preload('class-dynamic.html', 100);
-					events.preload('class-group.html', 120);
+					events.preload('class-group.html');
 					var write=document.getElementById('write');
 					var data = plus.webview.currentWebview().data;
 					console.log('班级空间：' + JSON.stringify(data));
