注册、验证码界面bug

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -106,12 +106,12 @@
 				
 				//从验证码界面登录或者注册时
 				window.addEventListener('registerPW', function() {
-					back.style.display = 'inline-block';
+					back.style.display = 'none';
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
-					document.getElementById('cancelBtn').style.display = 'none';
+					document.getElementById('cancelBtn').style.display = 'inline-block';
 					modifypasswordBtn.innerHTML = '完成';
 					console.log('22222');
 				});
