修改家校圈主页

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -17,6 +17,10 @@
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/native.js"></script>
 		<style>
+			.mui-table-view-cell, .mui-table-view-cell:active {
+    background-color: #FFFFFF;
+}
+			
 			.mui-table-view {
 				background: transparent;
 				/*背景色透明*/
