--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -58,7 +58,7 @@
 					<li id="empty" class="ditem-empty">无记录</li>
 				</ul>-->
 				<div class="mui-input-row">
-					<label>需学生在线提交</label>
+					<label class="submit-label">需学生在线提交</label>
 					<div id="onlineSwitch" class="mui-switch mui-active mui-switch-green online-switch">
 						<div class="mui-switch-handle"></div>
 					</div>
