--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -140,7 +140,7 @@
 							break;
 							//我的空间
 						case 4:
-							events.openNewWindowWithData('/html/quan/zone_main.html', 0);
+							events.openNewWindowWithData('/html/quan/zone_main.html', personalUTID);
 							break;
 							//积分
 						case 5:
