增加群主资料，调整创建群的界面

--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -413,7 +413,7 @@
 				 * @param {Object} type 资料类型2老师,3学生
 				 */
 				function getData(type) {
-					console.log('type:' + type);
+					console.log('type:' + type + '|stuid:' + data.stuid);
 					//22.通过用户资料ID获取用户各项资料
 					//所需参数
 					var comData = {
